--- a/views/registerCar.ejs
+++ b/views/registerCar.ejs
@@ -37,7 +37,7 @@
 
             <div class="form-group">
                 <label for="carEngine">Engine</label>
-                <input type="carEngine" id="carEngine" name="carEngine" class="form-control" placeholder="Cylinder Engine"
+                <input type="carEngine" id="carEngine" name="carEngine" class="form-control" placeholder="Cylinder"
                     value="<%= typeof carEngine != 'undefined' ? carEngine : '' %>" />
             </div>
 
