Fixed carMake push to mongoose

--- a/views/registerCar.ejs
+++ b/views/registerCar.ejs
@@ -4,44 +4,51 @@
             <h1 class="text-center mb-3">
                 <i class="fas fa-car fa-2x"></i>
                 <i class="fas fa-plus"></i> </br> Car Registration</h1>
-            
-            <div class="form-group">
-                <label for="carMake">Make</label>
-                <input type="carMake" id="carMake" name="carMake" class="form-control" placeholder="E.g. Lexus"
-                    value="<%= typeof carMake != 'undefined' ? carMake : '' %>" />
-            </div>
 
-            <div class="form-group">
-                <label for="carModel">Model</label>
-                <input type="carModel" id="carModel" name="carModel" class="form-control" placeholder="E.g. RX 400H"
-                    value="<%= typeof carModel != 'undefined' ? carModel : '' %>" />
-            </div>
+            <%- include('./partials/messages.ejs'); %>
+            <form action="/users/registerCar" method="POST">
 
-            <div class="form-group">
-                <label for="carkm">Kilometers</label>
-                <input type="carkm" id="carkm" name="carkm" class="form-control" placeholder="E.g. 250000"
-                    value="<%= typeof carkm != 'undefined' ? carkm : '' %>" />
-            </div>
+                <div class="form-group">
+                    <label for="carMake">Make</label>
+                    <input type="carMake" id="carMake" name="carMake" class="form-control" placeholder="E.g. Lexus"
+                        value="<%= typeof carMake != 'undefined' ? carMake : '' %>" />
+                </div>
 
-            <div class="form-group">
-                <label for="carOC">Last Oil Change</label>
-                <input type="carOC" id="carOC" name="carOC" class="form-control" placeholder="E.g. Mar 15 2020"
-                    value="<%= typeof carOC != 'undefined' ? carOC : '' %>" />
-            </div>
+                <div class="form-group">
+                    <label for="carModel">Model</label>
+                    <input type="carModel" id="carModel" name="carModel" class="form-control" placeholder="E.g. RX 400H"
+                        value="<%= typeof carModel != 'undefined' ? carModel : '' %>" />
+                </div>
 
-            <div class="form-group">
-                <label for="carTransmission">Transmission</label>
-                <input type="carTransmission" id="carTransmission" name="carTransmission" class="form-control" placeholder="Automatic/Manual"
-                    value="<%= typeof carTransmission != 'undefined' ? carTransmission : '' %>" />
-            </div>
+                <div class="form-group">
+                    <label for="carkm">Kilometers</label>
+                    <input type="carkm" id="carkm" name="carkm" class="form-control" placeholder="E.g. 250000"
+                        value="<%= typeof carkm != 'undefined' ? carkm : '' %>" />
+                </div>
 
-            <div class="form-group">
-                <label for="carEngine">Engine</label>
-                <input type="carEngine" id="carEngine" name="carEngine" class="form-control" placeholder="Cylinder"
-                    value="<%= typeof carEngine != 'undefined' ? carEngine : '' %>" />
-            </div>
+                <div class="form-group">
+                    <label for="carOC">Last Oil Change</label>
+                    <input type="carOC" id="carOC" name="carOC" class="form-control" placeholder="E.g. Mar 15 2020"
+                        value="<%= typeof carOC != 'undefined' ? carOC : '' %>" />
+                </div>
 
-            
+                <div class="form-group">
+                    <label for="carTransmission">Transmission</label>
+                    <input type="carTransmission" id="carTransmission" name="carTransmission" class="form-control"
+                        placeholder="Automatic/Manual"
+                        value="<%= typeof carTransmission != 'undefined' ? carTransmission : '' %>" />
+                </div>
+
+                <div class="form-group">
+                    <label for="carEngine">Engine</label>
+                    <input type="carEngine" id="carEngine" name="carEngine" class="form-control" placeholder="Cylinder"
+                        value="<%= typeof carEngine != 'undefined' ? carEngine : '' %>" />
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">
+                    Submit
+                </button>
+
+                <p class="lead mt-4"><a href="/users/cars">View Cars</a></p>
         </div>
     </div>
 </div>
