--- a/views/registerCar.ejs
+++ b/views/registerCar.ejs
@@ -48,7 +48,7 @@
                     Submit
                 </button>
 
-                <p class="lead mt-4"><a href="/users/cars">View Cars</a></p>
+                <p class="lead mt-4"><a href="/dashboard">View Cars</a></p>
         </div>
     </div>
 </div>
