--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,5 @@
 <h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= name %> <%= email%></p>
+<p class="lead mb-3">Welcome <%= name %></p>
 
 <h1 class="text-center"> Car Gallery </h1>
 
