--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mb-3">
-        <i class="fas fa-user-plus"></i> Register</h1>
+        <i class="fas fa-user-plus"></i> <a href="/">Register</a></h1>
       <%- include('./partials/messages.ejs'); %>
       <form action="/users/register" method="POST">
         <div class="form-group">
