--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,6 @@
-<h1 class="mt-4">Dashboard</h1>
+<h1 class="mt-4"><a href="/users/login">Dashboard</a></h1>
 <p class="lead mb-3">Welcome <%= name %></p>
+
 
 <h1 class="text-center"> Car Gallery </h1>
 
