--- a/views/registerCar.ejs
+++ b/views/registerCar.ejs
@@ -33,10 +33,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="carTransmission">Transmission</label>
-                    <input type="carTransmission" id="carTransmission" name="carTransmission" class="form-control"
+                    <label for="carTrans">Transmission</label>
+                    <input type="carTrans" id="carTransmission" name="carTrans" class="form-control"
                         placeholder="Automatic/Manual"
-                        value="<%= typeof carTransmission != 'undefined' ? carTransmission : '' %>" />
+                        value="<%= typeof carTrans != 'undefined' ? carTrans : '' %>" />
                 </div>
 
                 <div class="form-group">
